# eudev

./: .gitignore  configure.ac
docs/gudev/: Makefile.am
man/: udevd.xml
src/: Makefile.am
src/ata_id/: ata_id.c
src/libudev/: path-util.c  strbuf.c
src/udev/: mkdir.c  udevadm-hwdb.c  udevd.c
test/: Makefile.am
